--- a/election_prediction/src/requirements.txt
+++ b/election_prediction/src/requirements.txt
@@ -4,9 +4,15 @@ ipython>=7.31.1, <8.0
 isort~=5.0
 jupyter~=1.0
 jupyterlab~=3.0
-kedro==0.18.1
+kedro[pandas.CSVDataSet]==0.18.1
+kedro[picke.PickleDataSet]==0.18.1
 kedro-telemetry~=0.2.0
 nbstripout~=0.4
 pytest-cov~=3.0
 pytest-mock>=1.7.1, <2.0
 pytest~=6.2
+seaborn==0.11.2
+matplotlib==3.5.2
+scipy==1.8.1
+numpy==1.23.0
+scikit-learn==1.1.1
